--- a/client/helpers/ironTableCheckbox.html
+++ b/client/helpers/ironTableCheckbox.html
@@ -2,7 +2,8 @@
 <template name="ironTableCheckbox">
   <div class="check-mark {{#if column.contenteditable}}pointer{{/if}}">
     {{#if doEdit}}
-      <input class="check-mark-checkbox" type="checkbox" checked="{{value}}">
+      <input class="check-mark-checkbox" type="checkbox" id="checkbox" checked="{{value}}">
+      <label for="checkbox"></label>
     {{else}}
       {{#if value}}
         <i class="fa {{checkedMark}}"></i>
@@ -11,4 +12,9 @@
       {{/if}}
     {{/if}}
   </div>
+</template>
+
+
+<template name="ironTableCheckboxCheckbox">
+  <input class="check-mark-checkbox" type="checkbox" checked="{{value}}">
 </template>
