--- a/client/helpers/ironTableSelect.html
+++ b/client/helpers/ironTableSelect.html
@@ -24,5 +24,5 @@
 </template>
 
 <template name="ironTableOption">
-  <option value="{{key}}" {{selected}}>{{val}}</option>
+  <option value="{{key}}" {{disabled}} {{selected}}>{{val}}</option>
 </template>
