add options pass thrus and clean up

--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -95,18 +95,18 @@
 
     <span class="links">
         {{#if doDownloadLink}}
-          <button id="download-link" class="btn btn-sm blue waves-effect waves-light">
+          <button id="download-link" class="btn btn-sm {{downloadButtonColor}} waves-effect waves-light">
             <i class="mdi-file-cloud-download left"></i> Download
           </button>
         {{/if}}
 
         {{#if newRecordRoute}}
-            <a class="btn btn-sm green waves-effect waves-light" href="{{pathFor newRecordRoute}}">
+            <a class="btn btn-sm {{newButtonColor}} waves-effect waves-light" href="{{pathFor newRecordRoute}}">
               {{newRecordTitle}} <i class="mdi-file-cloud-download right"></i>
             </a>
         {{else}}
           {{#if showNewButton}}
-            <button id="iron-table-new-record" class="btn btn-sm green waves-effect waves-light">
+            <button id="iron-table-new-record" class="btn btn-sm {{newButtonColor}} waves-effect waves-light">
               {{newRecordTitle}} <i class="mdi-file-cloud-download right"></i>
             </button>
           {{/if}}
