--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -94,23 +94,27 @@
     </h3>
 
     <span class="links">
-        {{#if doDownloadLink}}
-          <button id="download-link" class="btn btn-sm {{downloadButtonColor}} waves-effect waves-light">
-            <i class="mdi-file-cloud-download left"></i> Download
+      {{#if extraLinkTemplate}}
+        {{> Template.dynamic template=extraLinkTemplate}}
+      {{/if}}
+
+      {{#if doDownloadLink}}
+        <button id="download-link" class="btn btn-sm {{downloadButtonColor}} waves-effect waves-light">
+          Download<i class="mdi-file-cloud-download right "></i> 
+        </button>
+      {{/if}}
+
+      {{#if newRecordRoute}}
+          <a class="btn btn-sm {{newButtonColor}} waves-effect waves-light" href="{{pathFor newRecordRoute}}">
+            {{newRecordTitle}}<i class="mdi-file-cloud-download right"></i>
+          </a>
+      {{else}}
+        {{#if showNewButton}}
+          <button id="iron-table-new-record" class="btn btn-sm {{newButtonColor}} waves-effect waves-light">
+            {{newRecordTitle}}<i class="mdi-content-add-circle right"></i>
           </button>
         {{/if}}
-
-        {{#if newRecordRoute}}
-            <a class="btn btn-sm {{newButtonColor}} waves-effect waves-light" href="{{pathFor newRecordRoute}}">
-              {{newRecordTitle}} <i class="mdi-file-cloud-download right"></i>
-            </a>
-        {{else}}
-          {{#if showNewButton}}
-            <button id="iron-table-new-record" class="btn btn-sm {{newButtonColor}} waves-effect waves-light">
-              {{newRecordTitle}} <i class="mdi-file-cloud-download right"></i>
-            </button>
-          {{/if}}
-        {{/if}}
+      {{/if}}
     </span>
   </div>
 </template>
@@ -169,12 +173,14 @@
       </div>
 
       <div class="col s4 iron-table-pager right-align valign">
-        <a href="" id="previous" class="btn-flat waves-effect {{previousPathClass}}">
+        <ul class="pagination">
+          <li class="{{previousPathClass}}"><a id="previous" href="">
             <i class="mdi-navigation-chevron-left"></i>
-        </a>
-        <a href="" id="next" class="btn-flat waves-effect {{nextPathClass}}">
-            <i class="mdi-navigation-chevron-right"></i>
-        </a>
+          </a></li>
+          <li class="{{nextPathClass}}"><a id="next" href="">
+            <i class="mdi-navigation-chevron-right"></i></a>
+          </li>
+        </ul>
       </div>
     {{else}}
       <div class="col s8 iron-table-pager-display left-align valign">
