do fixed footer

--- a/client/ironTableForm.html
+++ b/client/ironTableForm.html
@@ -31,7 +31,7 @@
     <label for="{{#unless static}}{{key}}{{/unless}}" class="{{#if value}}active{{/if}}">{{header}}</label>
     <input 
       type="{{displayType}}" 
-      class="form-control {{#if tooltip}}tooltipped{{/if}}" 
+      class="form-control {{#if tooltip}}tooltipped{{/if}} validate {{#if hasError}}invalid{{/if}} {{#if hasSuccess}}valid{{/if}}" 
       name="{{key}}"
       id="{{key}}"
       value="{{value}}"
@@ -43,6 +43,12 @@
       rel='{{#if tooltip}}tooltip{{/if}}' 
       data-position="{{#if tooltip}}right{{/if}}"
       disabled="{{static}}" />
+    {{#if hasIcon}}
+        <span class="{{iconClass}}"></span>
+    {{/if}}
+    {{#if hasError}}
+      <span class='red-text'>{{errorText}}</span>
+    {{/if}}
    
   </div>
 </template>
