--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -252,7 +252,7 @@
     {{#if extraControls}}{{> extraControls }}{{/if}}
 
     {{#if editOk}}
-        <a href="{{editRoute}}" class="btn-flat waves-effect iron-table-edit-record tooltipped"
+        <a href="{{pathFor route=editRoute}}" class="btn-flat waves-effect iron-table-edit-record tooltipped"
           data-tooltip='Edit Record' rel='tooltip'>
           <i class="mdi-editor-mode-edit"></i>
         </a>
