--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -85,7 +85,7 @@
     {{#if tableTitle}}
       <h3 class="truncate col l4 m4 s12 {{#if showTitleLargeOnly}}hide-on-med-and-down{{/if}}">
         {{#if showBackButton}}
-          <a class="btn-flat waves-effect waves-light back-btn" onclick="window.history.back()"><i class="mdi-navigation-chevron-left"></i></a>
+          <a class="btn-floating waves-effect waves-light back-btn" onclick="window.history.back()"><i class="mdi-navigation-chevron-left"></i></a>
         {{/if}}
 
         {{{tableTitle}}}
