--- a/client/ironTable.html
+++ b/client/ironTable.html
@@ -22,14 +22,14 @@
               {{> ironTableNav}}
               
               <div class="table-container">
-                <table class="{{classes.table}}">
+                <table class="{{classes.table}} {{moreTableClasses}}">
                   <thead>
                     <tr>
                       {{> ironTableHeaders}}
                     </tr>
                   </thead>
 
-                  <tbody class="{{rowLink}}" data-link="{{dataLink}}">
+                  <tbody>
                       {{> ironTableRecords}}
                   </tbody>
                 </table>
@@ -108,12 +108,12 @@
 
       {{#if newRecordRoute}}
           <a class="btn {{newButtonColor}} waves-effect waves-light" href="{{pathFor newRecordRoute}}">
-            {{newRecordTitle}}<i class="mdi-file-cloud-download right"></i>
+            {{irtblT9nit newRecordTitle}}<i class="mdi-file-cloud-download right"></i>
           </a>
       {{else}}
         {{#if showNewButton}}
           <button id="iron-table-new-record" class="btn {{newButtonColor}} waves-effect waves-light">
-            {{newRecordTitle}}<i class="mdi-content-add-circle right"></i>
+            {{irtblT9nit newRecordTitle}}<i class="mdi-content-add-circle right"></i>
           </button>
         {{/if}}
       {{/if}}
@@ -146,7 +146,7 @@
     <div class="offset-s4 col s4">
 
       <select id="filter-column">
-        <option value="_none_">No Filter</option>
+        <option value="_none_">{{irtblT9nit 'No Filter'}}</option>
         {{#each headers}}
           {{#if canFilterOn}}
             <option value="{{key}}" selected="{{#if filterOnThisCol}}selected{{/if}}">{{capitalize colName}}</option>
@@ -174,7 +174,7 @@
     {{#if showPager}}
       <div class="iron-table-pager-display col s8 left-align valign">
         <b>
-          Displaying {{recordDisplayStart}} - {{recordDisplayStop}} out of {{recordCount}} {{recordsName}}
+          {{irtblT9nit 'Displaying'}} {{recordDisplayStart}} - {{recordDisplayStop}} out of {{recordCount}} {{irtblT9nit recordsName}}
         </b>
       </div>
 
@@ -188,7 +188,7 @@
       </div>
     {{else}}
       <div class="col s8 iron-table-pager-display left-align valign">
-        <strong>{{recordCount}} {{recordsName}}</strong>
+        <strong>{{recordCount}} {{irtblT9nit recordsName}}</strong>
       </div>
     {{/if}}
   </div>
@@ -203,7 +203,7 @@
             </button>
         {{else}}
         <button class="btn-flat waves-effect table-col-head tooltipped"
-            data-tooltip="{{#if sort}}Reverse sort order{{else}}Sort on {{capitalize colName}}{{/if}}"
+            data-tooltip="{{#if sort}}{{irtblT9nit 'Reverse sort order'}}{{else}}{{irtblT9nit 'Sort on'}} {{capitalize colName}}{{/if}}"
             rel='tooltip'>
             {{capitalize colName}}
             {{#if sort}}
@@ -243,7 +243,7 @@
       <a 
         class="btn-flat waves-effect waves-light tooltipped show-record" 
         
-        data-tooltip="Show Record Object"
+        data-tooltip="{{irtblT9nit 'Show Record Object'}}"
         data-position="left"
         rel='tooltip'
       ><i class="mdi-action-description"></i></a>
@@ -253,13 +253,13 @@
 
     {{#if editOk}}
         <a href="{{pathFor route=editRoute}}" class="btn-flat waves-effect iron-table-edit-record tooltipped"
-          data-tooltip='Edit Record' rel='tooltip'>
+          data-tooltip="{{irtblT9nit 'Edit Record'}}" rel='tooltip'>
           <i class="mdi-editor-mode-edit"></i>
         </a>
     {{/if}}
 
     {{#if deleteOk}}
-        <a class="btn-flat waves-effect iron-table-delete-record" data-tooltip='Delete Record' rel='tooltip'>
+        <a class="btn-flat waves-effect iron-table-delete-record" data-tooltip="{{irtblT9nit 'Delete Record'}}" rel='tooltip'>
             <i class="mdi-action-delete"></i>
         </a>
     {{/if}}
